--- a/playbook.yml
+++ b/playbook.yml
@@ -1,11 +1,11 @@
 - hosts: all
-  become: yes
-  
+  become: true
+
   pre_tasks:
     - name: update apt cache
       ansible.builtin.apt:
-        update_cache: yes  
-      
+        update_cache: true  
+
   roles:
     - role: geerlingguy.pip
 
@@ -15,23 +15,22 @@
         src: ./templates/redmine.env.j2
         dest: /etc/.env
         mode: '0600'
-  
+
     - name: start redmine docker image
       community.docker.docker_container:
         name: devops-example-app
         image: redmine
         published_ports: "{{ app_port }}:3000"
         restart_policy: always
-        restart: yes
+        restart: true
         container_default_behavior: no_defaults
-        pull: yes
+        pull: true
         env_file:
           /etc/.env
 
 - hosts: webservers
-  gather_facts: yes
-  become: yes
-  
+  become: true
+
   roles:
     - name: datadog.datadog
 
