--- a/group_vars/webservers/vars.yml
+++ b/group_vars/webservers/vars.yml
@@ -1,5 +1,5 @@
-db_host: rc1c-iurndd3nmp5hpdg1.mdb.yandexcloud.net
-db_port: 6432
-db_user: user1
-db_name: redmine_db
-db_password: "{{ vault_db_password }}"
+redmine_db_host: rc1c-iurndd3nmp5hpdg1.mdb.yandexcloud.net
+redmine_db_port: 6432
+redmine_db_user: user1
+redmine_db_name: redmine_db
+redmine_db_password: "{{ vault_redmine_db_password }}"
