--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,10 @@
 roles:
   - name: geerlingguy.pip
+    version: 2.1.0
+
   - name: datadog.datadog
-  
+    version: 4.14.0
+
 collections:
   - name: community.docker
     version: 2.0.2
