--- a/playbook.yml
+++ b/playbook.yml
@@ -14,12 +14,13 @@
       ansible.builtin.file:
         path: "{{ redmine_env_dir }}"
         state: directory
+        mode: "0600"
 
     - name: make .env file from template
       ansible.builtin.template:
-        src: ./templates/redmine.env.j2
+        src: redmine.env.j2
         dest: "{{ redmine_env_dir }}/.env"
-        mode: '0600'
+        mode: "0600"
 
     - name: start redmine docker image
       community.docker.docker_container:
